--- a/PruebasUnitarias/PruebasUnitarias.csproj
+++ b/PruebasUnitarias/PruebasUnitarias.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PostPruebasUnitarias\PostPruebasUnitarias.csproj">
+      <Project>{d7b9a9c9-3b55-4d27-be90-4c74e777aa3c}</Project>
+      <Name>PostPruebasUnitarias</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
